argo-apps/guestbook-ui/guestbook-ui-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-prefix
spec:
  stripPrefix:
    prefixes:
      - "/guestbook-ui"
