argo-apps/guestbook-ui/guestbook-ui-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: guestbook
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
