argo-apps/guestbook-ui/guestbook-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guestbook-ui
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    traefik.ingress.kubernetes.io/router.entrypoints: web

    # NOTE: The middleware needs to be prefixed with namespace (guestbook) unless in default
    traefik.ingress.kubernetes.io/router.middlewares: guestbook-strip-prefix@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /guestbook-ui
            pathType: Prefix
            backend:
              service:
                name: guestbook-ui
                port:
                  number: 80
